fixed horizontal scroller

--- a/victorias-cakes/src/app/contacts/contacts.component.css
+++ b/victorias-cakes/src/app/contacts/contacts.component.css
@@ -1,7 +1,7 @@
 .contacts-background {
   background-image: url("./../../assets/background-pink-cupcake.jpg");
   height: 900px;
-  width: 1920px;
+  width: 100%;
   background-repeat: repeat;
   background-size: contain;
   background-position: right;
